--- a/apache22/conf/vhost/httpd-debug.conf
+++ b/apache22/conf/vhost/httpd-debug.conf
@@ -1,5 +1,5 @@
-LoadModule info_module modules/mod_info.so 
-LoadModule status_module modules/mod_status.so 
+# LoadModule info_module modules/mod_info.so 
+# LoadModule status_module modules/mod_status.so 
 #Alias /debug  "htdocs/debug"
 ###################################################################
 <IfModule jk_module>
