--- a/apache22/conf/vhost/httpd-subversion.conf
+++ b/apache22/conf/vhost/httpd-subversion.conf
@@ -3,11 +3,11 @@
 #</Location>
 ###################################################################
 <IfModule dav_svn_module>
-<Location /code>
+<Location /code/svn>
 	DAV svn
 	SVNListParentPath on 
 	SVNReposName "Subversion Repository" 
-	SVNParentPath "C:/apnode/apache22/code/svn"
+	SVNParentPath "C:/apnode/apache22/code/svn_souce"
 	AuthName "Subversion Auth"
 	# AuthType Basic 
 	# Require valid-user
