--- a/apache22/conf/vhost/vhost-ssl.conf
+++ b/apache22/conf/vhost/vhost-ssl.conf
@@ -68,9 +68,9 @@ ErrorDocument 404 /404.htm
 #BrowserMatch ".*MSIE.*" nokeepalive ssl-unclean-shutdown downgrade-1.0 force-response-1.0
 #CustomLog "logs/ssl_request.log %t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 ###################################################################
-Include conf/httpd-buddy.conf
+#Include conf/httpd-sqlbuddy.conf
 ###################################################################
-Include conf/httpd-perl.conf
+#Include conf/httpd-perl.conf
 ###################################################################
 </VirtualHost>
 </IfModule>
