--- a/apache22/conf/httpd.conf
+++ b/apache22/conf/httpd.conf
@@ -27,9 +27,9 @@
 # at a local disk.  If you wish to share the same ServerRoot for multiple
 # httpd daemons, you will need to change at least LockFile and PidFile.
 #
-############################################################################
+###############################################################
 #ServerRoot "@@ServerRoot@@"
-############################################################################
+###############################################################
 ServerRoot "C:/apnode/apache22"
 
 #
@@ -41,9 +41,9 @@ ServerRoot "C:/apnode/apache22"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-############################################################################
+###############################################################
 #Listen @@Port@@
-############################################################################
+###############################################################
 Listen 127.0.0.1:90
 #
 # Dynamic Shared Object (DSO) Support
@@ -57,9 +57,9 @@ Listen 127.0.0.1:90
 # Example:
 # LoadModule foo_module modules/mod_foo.so
 #
-############################################################################
+###############################################################
 #@@LoadModule@@
-############################################################################
+###############################################################
  LoadModule actions_module modules/mod_actions.so 
  LoadModule alias_module modules/mod_alias.so 
  LoadModule asis_module modules/mod_asis.so 
@@ -83,8 +83,8 @@ Listen 127.0.0.1:90
  #LoadModule cern_meta_module modules/mod_cern_meta.so 
  LoadModule cgi_module modules/mod_cgi.so 
  #LoadModule charset_lite_module modules/mod_charset_lite.so 
- #LoadModule dav_module modules/mod_dav.so 
- #LoadModule dav_fs_module modules/mod_dav_fs.so 
+ LoadModule dav_module modules/mod_dav.so 
+ LoadModule dav_fs_module modules/mod_dav_fs.so 
  #LoadModule dav_lock_module modules/mod_dav_lock.so 
  #LoadModule dbd_module modules/mod_dbd.so 
  #LoadModule deflate_module modules/mod_deflate.so 
@@ -100,7 +100,7 @@ Listen 127.0.0.1:90
  #LoadModule ident_module modules/mod_ident.so 
  #LoadModule imagemap_module modules/mod_imagemap.so 
  LoadModule include_module modules/mod_include.so 
- #LoadModule info_module modules/mod_info.so 
+ LoadModule info_module modules/mod_info.so 
  LoadModule isapi_module modules/mod_isapi.so 
  #LoadModule ldap_module modules/mod_ldap.so 
  #LoadModule logio_module modules/mod_logio.so 
@@ -121,15 +121,15 @@ Listen 127.0.0.1:90
  LoadModule rewrite_module modules/mod_rewrite.so 
  LoadModule setenvif_module modules/mod_setenvif.so 
  #LoadModule speling_module modules/mod_speling.so 
- #LoadModule ssl_module modules/mod_ssl.so 
- #LoadModule status_module modules/mod_status.so 
+ # LoadModule ssl_module modules/mod_ssl.so 
+ LoadModule status_module modules/mod_status.so 
  #LoadModule substitute_module modules/mod_substitute.so 
  #LoadModule unique_id_module modules/mod_unique_id.so 
  #LoadModule userdir_module modules/mod_userdir.so 
  #LoadModule usertrack_module modules/mod_usertrack.so 
- #LoadModule version_module modules/mod_version.so 
- #LoadModule vhost_alias_module modules/mod_vhost_alias.so 
-############################################################################
+ LoadModule version_module modules/mod_version.so 
+ LoadModule vhost_alias_module modules/mod_vhost_alias.so 
+###############################################################
 
 <IfModule !mpm_netware_module>
 <IfModule !mpm_winnt_module>
@@ -184,9 +184,9 @@ ServerName localhost:90
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-############################################################################
+###############################################################
 #DocumentRoot "@exp_htdocsdir@"
-############################################################################
+###############################################################
 DocumentRoot "htdocs"
 
 #
@@ -214,9 +214,9 @@ DocumentRoot "htdocs"
 #
 # This should be changed to whatever you set DocumentRoot to.
 #
-############################################################################
+###############################################################
 #<Directory "@exp_htdocsdir@">
-############################################################################
+###############################################################
 <Directory "htdocs">
     #
     # Possible values for the Options directive are "None", "All",
@@ -272,9 +272,9 @@ DocumentRoot "htdocs"
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
-###################################################################
+###############################################################
 # ErrorLog "@rel_logfiledir@/error_log"
-###################################################################
+###############################################################
 ErrorLog "logs/apache22-error.log"
 
 #
@@ -513,8 +513,9 @@ DefaultType text/plain
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
-###################################################################
+###############################################################
 Include conf/mod/httpd-mod-svn.conf
 Include conf/vhost/httpd-subversion.conf
+#Include conf/vhost/httpd-git.conf
 # Include conf/vhost.conf
-###################################################################
+###############################################################
