Apache 默认端口 8080 Vhost 端口 8080 添加 PHP54TS 模块

--- a/apache22/conf/httpd.conf
+++ b/apache22/conf/httpd.conf
@@ -44,7 +44,7 @@ ServerRoot "C:/apnode/apache22"
 ###############################################################
 #Listen @@Port@@
 ###############################################################
-Listen 127.0.0.1:90
+Listen 127.0.0.1:8080
 #
 # Dynamic Shared Object (DSO) Support
 #
@@ -177,7 +177,7 @@ ServerAdmin webmaster@localhost
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
 #ServerName www.example.com:@@Port@@
-ServerName localhost:90
+ServerName localhost
 
 #
 # DocumentRoot: The directory out of which you will serve your
@@ -514,8 +514,9 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 ###############################################################
-Include conf/mod/httpd-mod-svn.conf
-Include conf/vhost/httpd-subversion.conf
+# Include conf/mod/httpd-mod-svn.conf
+# Include conf/mod/httpd-mod-php54ts.conf
+# Include conf/vhost/httpd-subversion.conf
 #Include conf/vhost/httpd-git.conf
-# Include conf/vhost.conf
+Include conf/vhost.conf
 ###############################################################
