--- a/apache22/conf/vhost.conf
+++ b/apache22/conf/vhost.conf
@@ -62,12 +62,13 @@ ServerTokens Prod
 # Include conf/mod/httpd-mod-jkmod.conf
 # Include conf/mod/httpd-mod-php53ts.conf 
 # Include conf/mod/httpd-mod-php52ts.conf 
-Include conf/mod/httpd-mod-svn.conf
+Include conf/mod/httpd-mod-svn.conf 
+Include conf/mod/httpd-mod-php54ts.conf
 # ##################################################################
-NameVirtualHost *:90
+NameVirtualHost *:8080
 # ##################################################################
 # ##################################################################
-<VirtualHost _default_:90>
+<VirtualHost _default_:8080>
  ServerName localhost
  ServerAdmin admin@localhost 
  DocumentRoot "C:/apnode/apache22/htdocs"
@@ -110,7 +111,7 @@ NameVirtualHost *:90
 </FilesMatch> 
 
 # ##################################################################
-<Directory "D:/apdata/www/webroot"> 
+<Directory "C:/apnode/apache22/htdocs"> 
   Options FollowSymLinks Indexes ExecCGI
   AllowOverride All
   Order Allow,Deny
@@ -145,13 +146,20 @@ NameVirtualHost *:90
 # Include conf/vhost/httpd-jkmod.conf
 # Include conf/vhost/httpd-webmail.conf     
 # ##################################################################
-# Include conf/vhost/httpd-debug.conf
 # Include conf/vhost/httpd-webgrind.conf
 # Include conf/vhost/httpd-roundcube.conf 
-# Include conf/vhost/httpd-subversion.conf
 # Include conf/vhost/httpd-sqlbuddy.conf
 # Include conf/vhost/httpd-finder.conf
+Include conf/vhost/httpd-debug.conf
+Include conf/vhost/httpd-subversion.conf
 # ################################################################## 
+<IfModule php5_module>
+php_flag  display_errors on
+php_admin_value open_basedir "C:/apnode/apache22/htdocs;C:/apnode/apache22/temp"
+# php_flag - PHP Flag Modifier
+# php_admin_flag - PHP Flag Modifier (Admin)
+# PHPINIDir - Directory containing the php.ini file
+</IfModule>  
 # ##################################################################
 # ##################################################################
 </VirtualHost>
