nginx fix clearn

--- a/WinswNginx/conf/_default.conf
+++ b/WinswNginx/conf/_default.conf
@@ -45,7 +45,8 @@ log_format log_vhost '$remote_addr [$http_host] [$uri] [$time_iso8601] $status $
 server_tokens off;  
 keepalive_timeout  120;
 client_max_body_size  100m; 
-access_log 			  logs/access.log   ;
+access_log			logs/default.access.log   ;
+error_log   		logs/default.error.log;
 ####################################
 # 配置多个 server 虚拟主机，必须要在配置文档中 http { 里头加上 server_names_hash_bucket_size 64; 这么一句
 server_names_hash_bucket_size 64;
@@ -56,23 +57,24 @@ server {
 	server_name  visualhost;
 	charset utf8;
 	####################################
-	error_log   logs/vhost/vhost.error.log;
+	error_log   logs/visualhost.error.log;
 	####################################
-	# access_log  logs/default.access.log log_vhost;
+	# access_log  logs/visualhost.access.log log_vhost;
 	####################################
 	if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})") {
 		set $year $1;
 		set $month $2;
 		set $day $3;
 	}
-	access_log  logs/vhost/vhost.access.$year-$month-$day.log log_vhost;
+	access_log  logs/visualhost.access.$year-$month-$day.log log_vhost;
 	####################################
 	index   index.html index.htm index.php;
 	####################################
+	root   vhost;
+	####################################
+	include _php56.conf;
+	####################################
 	location / {
-		root   vhost;
-		####################################
-		include _php56.conf;
 		####################################
 		# location ~ \.php$ {
 		# fastcgi_pass   127.0.0.1:9006;
@@ -97,21 +99,22 @@ server {
 	#access_log  logs/localhost.access.log  main;
 	index  index.php index.html index.htm;
 	####################################
-	error_log   logs/localhost/localhost.error.log;	
+	error_log   logs/localhost.error.log;	
 	####################################
-	# access_log  C:/apdata/Logs/visualhost/localhost.access.log log_vhost;
+	# access_log  logs/localhost.access.log log_vhost;
 	####################################
 	if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})") {
 		set $year $1;
 		set $month $2;
 		set $day $3;
 	}
-	access_log logs/localhost/localhost.access.$year-$month-$day.log log_vhost;	
+	access_log logs/localhost.access.$year-$month-$day.log log_vhost;	
+	####################################
+	root   html;
+	####################################
+	include _php56.conf;
 	####################################
 	location / {
-		root   html;
-		####################################
-		include _php56.conf;
 		####################################
 		# location ~ \.php$ {
 		# fastcgi_pass   127.0.0.1:9006;
