--- a/WinswPHP56x64NTS/php.ini
+++ b/WinswPHP56x64NTS/php.ini
@@ -629,11 +629,13 @@ user_dir =
 ; extension_dir = "./"
 ; On windows:
 ; extension_dir = "ext"
-extension_dir = "C:/apnode/WinswPHP56x64NTS/ext"
+; extension_dir = "C:/apnode/WinswPHP56x64NTS/ext"
+extension_dir = "./ext"
 ; Directory where the temporary files should be placed.
 ; Defaults to the system default (see sys_get_temp_dir)
 ; sys_temp_dir = "/tmp"
-sys_temp_dir = "C:/apnode/WinswPHP56x64NTS/temp/systemp"
+; sys_temp_dir = "C:/apnode/WinswPHP56x64NTS/temp/systemp"
+sys_temp_dir = "./temp/systemp"
 ; Whether or not to enable the dl() function.  The dl() function does NOT work
 ; properly in multithreaded servers, such as IIS or Zeus, and is automatically
 ; disabled on them.
@@ -645,6 +647,7 @@ enable_dl = Off
 ; **You CAN safely turn this off for IIS, in fact, you MUST.**
 ; http://php.net/cgi.force-redirect
 ;cgi.force_redirect = 1
+cgi.force_redirect = 0
 ; if cgi.nph is enabled it will force cgi to always sent Status: 200 with
 ; every request. PHP's default behavior is to disable this feature.
 ;cgi.nph = 1
@@ -700,7 +703,8 @@ file_uploads = On
 ; specified).
 ; http://php.net/upload-tmp-dir
 ;upload_tmp_dir =
-upload_tmp_dir = "C:/apnode/WinswPHP56x64NTS/temp/upload"
+; upload_tmp_dir = "C:/apnode/WinswPHP56x64NTS/temp/upload"
+upload_tmp_dir = "./temp/upload"
 ; Maximum allowed size for uploaded files.
 ; http://php.net/upload-max-filesize
 upload_max_filesize = 200M
@@ -820,6 +824,7 @@ cli_server.color = On
 ; Defines the default timezone used by the date functions
 ; http://php.net/date.timezone
 ;date.timezone =
+date.timezone =  Asia/Shanghai 
 ; http://php.net/date.default-latitude
 ;date.default_latitude = 31.7667
 ; http://php.net/date.default-longitude
@@ -1218,7 +1223,8 @@ session.save_handler = files
 ; does not overwrite the process's umask.
 ; http://php.net/session.save-path
 ;session.save_path = "/tmp"
-session.save_path = "C:/apnode/WinswPHP56x64NTS/temp/session"
+; session.save_path = "C:/apnode/WinswPHP56x64NTS/temp/session"
+session.save_path = "./temp/session"
 ; Whether to use strict session mode.
 ; Strict session mode does not accept uninitialized session ID and regenerate
 ; session ID if browser sends uninitialized session ID. Strict mode protects
@@ -1567,7 +1573,8 @@ tidy.clean_output = Off
 soap.wsdl_cache_enabled=1
 ; Sets the directory name where SOAP extension will put cache files.
 ; http://php.net/soap.wsdl-cache-dir
-soap.wsdl_cache_dir="C:/apnode/WinswPHP56x64NTS/temp/soap_temp"
+; soap.wsdl_cache_dir="C:/apnode/WinswPHP56x64NTS/temp/soap_temp"
+soap.wsdl_cache_dir="./temp/soap_temp"
 ; (time to live) Sets the number of second while cached file will be used
 ; instead of original one.
 ; http://php.net/soap.wsdl-cache-ttl
@@ -1694,7 +1701,7 @@ ldap.max_links = -1
 ;调试功能模块儿  
 ; extension=php_xdebug-2.2.5-5.3-vc9.dll  
 ; zend_extension ="php_xdebug.dll"  
-; zend_extension ="mod/php_xdebug.dll" 
+zend_extension ="mod/php_xdebug.dll" 
 xdebug.remote_handler=dbgp  
 ;开启远程调试  
 xdebug.remote_enable = On  
@@ -1715,9 +1722,11 @@ xdebug.collect_return = On
 ;收集参数   
 xdebug.collect_params = On  
 ;临时跟踪信息输出  
-xdebug.trace_output_dir="C:/apnode/WinswPHP56x64NTS/temp/xdebug_trace"  
+; xdebug.trace_output_dir="C:/apnode/WinswPHP56x64NTS/temp/xdebug_trace"  
+xdebug.trace_output_dir="./temp/xdebug_trace"  
 ;显示局部变量  
 xdebug.show_local_vars = On  
 xdebug.profiler_enable = off  
-xdebug.profiler_output_dir ="C:/apnode/WinswPHP56x64NTS/temp/xdebug_profiler"  
+; xdebug.profiler_output_dir ="C:/apnode/WinswPHP56x64NTS/temp/xdebug_profiler"  
+xdebug.profiler_output_dir ="./temp/xdebug_profiler"  
 xdebug.trace_enable_trigger =off  
