apache fix path

--- a/apache22/PHP54TS/php.ini
+++ b/apache22/PHP54TS/php.ini
@@ -718,7 +718,9 @@ user_dir =
 ; http://php.net/extension-dir
 ; extension_dir = "./"
 ; On windows:
-extension_dir = "C:/apnode/apache22/PHP54TS/ext"
+; extension_dir = "PHP54TS/ext"
+; extension_dir = "C:/apnode/apache22/PHP54TS/ext"
+extension_dir = PHP54TS/ext
 
 ; Whether or not to enable the dl() function.  The dl() function does NOT work
 ; properly in multithreaded servers, such as IIS or Zeus, and is automatically
@@ -856,9 +858,9 @@ default_socket_timeout = 60
 ; extension folders as well as the separate PECL DLL download (PHP 5).
 ; Be sure to appropriately set the extension_dir directive.
 ;
-;extension=php_bz2.dll
-;extension=php_curl.dll
-;extension=php_fileinfo.dll
+extension=php_bz2.dll
+extension=php_curl.dll
+extension=php_fileinfo.dll
 extension=php_gd2.dll
 ;extension=php_gettext.dll
 ;extension=php_gmp.dll
@@ -888,8 +890,8 @@ extension=php_pdo_sqlite.dll
 ;extension=php_snmp.dll
 
 ;extension=php_soap.dll
-;extension=php_sockets.dll
-;extension=php_sqlite3.dll
+extension=php_sockets.dll
+extension=php_sqlite3.dll
 ;extension=php_sybase_ct.dll
 ;extension=php_tidy.dll
 ;extension=php_xmlrpc.dll
@@ -1385,7 +1387,8 @@ session.save_handler = files
 ; does not overwrite the process's umask.
 ; http://php.net/session.save-path
 ; session.save_path = "/tmp"
-session.save_path = "C:/apnode/apache22/temp/session_save_path"
+; session.save_path = "C:/apnode/apache22/temp/session_save_path"
+session.save_path = "/apnode/apache22/temp/session_save_path"
 
 ; Whether to use cookies.
 ; http://php.net/session.use-cookies
@@ -1791,7 +1794,8 @@ soap.wsdl_cache_enabled=1
 
 ; Sets the directory name where SOAP extension will put cache files.
 ; http://php.net/soap.wsdl-cache-dir
-soap.wsdl_cache_dir="C:/apnode/apache22/temp/wsdl_cache_dir"
+; soap.wsdl_cache_dir="C:/apnode/apache22/temp/wsdl_cache_dir"
+soap.wsdl_cache_dir="/apnode/apache22/temp/wsdl_cache_dir"
 
 ; (time to live) Sets the number of second while cached file will be used
 ; instead of original one.
@@ -1831,3 +1835,21 @@ ldap.max_links = -1
 ; Local Variables:
 ; tab-width: 4
 ; End:
+[Xdebug]
+; zend_extension="/usr/local/php/modules/xdebug.so"
+; zend_extension = "PHP54TS/ext_xdebug/php_xdebug-2.4.1-5.4-vc9.dll"
+; zend_extension_ts = "/apnode/apache22/PHP54TS/xdebug/php_xdebug-2.4.1-5.4-vc9.dll"
+; zend_extension = "C:/apnode/apache22/PHP54TS/xdebug/php_xdebug-2.4.0rc4-5.4-vc9-nts.dll"
+; zend_extension = "D:/apnode/apache22/PHP54TS/xdebug/php_xdebug-2.4.0rc4-5.4-vc9-nts.dll"
+zend_extension_ts = "/apnode/apache22/PHP54TS/xdebug/php_xdebug-2.4.1-5.4-vc9.dll"
+
+xdebug.auto_trace=1
+xdebug.collect_params=1
+xdebug.collect_return=1
+xdebug.trace_output_dir="/apnode/apache22/temp/xdebug_trace"
+xdebug.profiler_enable=1
+xdebug.profiler_output_dir="/apnode/apache22/temp/xdebug_trace"
+
+xdebug.remote_enable=false
+xdebug.remote_host=127.0.0.1
+xdebug.remote_port=9000 
