--- a/apache22/conf/vhost.conf
+++ b/apache22/conf/vhost.conf
@@ -65,13 +65,13 @@ ServerTokens Prod
 Include conf/mod/httpd-mod-svn.conf 
 Include conf/mod/httpd-mod-php54ts.conf
 # ##################################################################
-NameVirtualHost *:8081
+NameVirtualHost *:80
 # ##################################################################
 # ##################################################################
-<VirtualHost _default_:8081>
+<VirtualHost _default_:80>
  ServerName localhost
  ServerAdmin admin@localhost 
- DocumentRoot "C:/apnode/apache22/htdocs"
+ DocumentRoot "/apnode/apache22/htdocs"
  ErrorLog "logs/localhost-error.log"
  LogLevel warn
 
@@ -111,7 +111,7 @@ NameVirtualHost *:8081
 </FilesMatch> 
 
 # ##################################################################
-<Directory "C:/apnode/apache22/htdocs"> 
+<Directory "/apnode/apache22/htdocs"> 
   Options FollowSymLinks Indexes ExecCGI
   AllowOverride All
   Order Allow,Deny
@@ -155,7 +155,7 @@ Include conf/vhost/httpd-subversion.conf
 # ################################################################## 
 <IfModule php5_module>
 php_flag  display_errors on
-php_admin_value open_basedir "C:/apnode/apache22/htdocs;C:/apnode/apache22/temp"
+php_admin_value open_basedir "/apnode/apache22/htdocs;/apnode/apache22/temp"
 # php_flag - PHP Flag Modifier
 # php_admin_flag - PHP Flag Modifier (Admin)
 # PHPINIDir - Directory containing the php.ini file
