--- a/apache22/bin/WinCacheGrind/WinCacheGrind.ini
+++ b/apache22/bin/WinCacheGrind/WinCacheGrind.ini
@@ -1,5 +1,6 @@
 [Main]
-WorkingDir=D:\cmdcons\daemon\apache22\logs\xdebug
+WorkingDir=D:\apnode\apache22\temp\debuger
+
 [Display]
 TimeDisplay=0
 HideFastFuncs=0
@@ -7,14 +8,8 @@ FastThreshold=1
 HideLibFuncs=0
 ShowFullPath=0
 [Privacy]
-TrackMRU=1
-ClearMRUOnExit=0
+TrackMRU=0
+ClearMRUOnExit=1
 MaxMRUCount=4
 [MRU]
-Count=3
-Entry0=D:\cmdcons\daemon\apache22\logs\xdebug\cachegrind.out.2604
-Title0=D:\cmdcons\data\webroot\index.php
-Entry1=D:\cmdcons\daemon\apache22\logs\xdebug\cachegrind.out.4620
-Title1=D:\cmdcons\data\webroot\index.php
-Entry2=D:\cmdcons\daemon\apache22\logs\xdebug\cachegrind.out.744
-Title2=D:\cmdcons\data\webroot\index.php
+Count=0
