--- a/apache22/conf/httpd.conf
+++ b/apache22/conf/httpd.conf
@@ -30,7 +30,7 @@
 ###############################################################
 #ServerRoot "@@ServerRoot@@"
 ###############################################################
-ServerRoot "C:/apnode/apache22"
+ServerRoot "/apnode/apache22"
 
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
@@ -44,7 +44,8 @@ ServerRoot "C:/apnode/apache22"
 ###############################################################
 #Listen @@Port@@
 ###############################################################
-Listen 127.0.0.1:8081
+Listen 127.0.0.1:80
+# Listen 0.0.0.0:80
 #
 # Dynamic Shared Object (DSO) Support
 #
