PHP 添加运行库

--- a/WinswPHP56x64NTS/php.ini
+++ b/WinswPHP56x64NTS/php.ini
@@ -1223,8 +1223,8 @@ session.save_handler = files
 ; does not overwrite the process's umask.
 ; http://php.net/session.save-path
 ;session.save_path = "/tmp"
-; session.save_path = "C:/apnode/WinswPHP56x64NTS/temp/session"
-session.save_path = "./temp/session"
+ session.save_path = "C:/apnode/WinswPHP56x64NTS/temp/session"
+;session.save_path = "./temp/session"
 ; Whether to use strict session mode.
 ; Strict session mode does not accept uninitialized session ID and regenerate
 ; session ID if browser sends uninitialized session ID. Strict mode protects
