change format_main log

--- a/WinswNginx/conf/_default.conf
+++ b/WinswNginx/conf/_default.conf
@@ -36,7 +36,7 @@
 # log_format combined  '$remote_addr - $remote_user  [$time_local]  '
 # ' "$request"  $status  $body_bytes_sent  '
 # ' "$http_referer"  "$http_user_agent" ';
-log_format format_main '$remote_addr [$http_host] [$uri] [$time_iso8601] $status $body_bytes_sent "$request" "$http_referer" "$http_user_agent" ';
+log_format format_main '[$time_iso8601] [$http_host] [$remote_addr] [$uri] $status $body_bytes_sent "$request" "$http_referer" "$http_user_agent" ';
 ####################################
 # gzip  on;
 # tcp_nopush on;
